--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -1,4 +1,4 @@
-﻿/* 主题色 */
+/* 主题色 */
 :root {
 	--fColor: #4C51B1;
 	--sColor: #6D6D6D;
@@ -112,7 +112,7 @@ input[type='checkbox'] {
 }
 
 /* 顶栏固定 */
-.sticky-top {
+.sticky-top-us {
 	position: sticky;
 	top: 0;
 	z-index: 1020;
@@ -155,8 +155,7 @@ input[type='checkbox'] {
 	border: 1px solid #eee;
 }
 
-.box6 {
-}
+.box6 {}
 
 .box6::-webkit-scrollbar {
 	width: 10px;
@@ -176,7 +175,7 @@ input[type='checkbox'] {
 
 .index-zhe {
 	background-color: white;
-	border-radius: 3vw;
+	border-radius: 100vw;
 }
 
 .float-instruction {
@@ -352,16 +351,18 @@ span {
 }
 
 /* 搜索页面 这里是傅文雅的CSS!*/
-ul,li {
+ul,
+li {
 	list-style: none;
+	padding-left: 0;
 }
 
-a {
+/* a {
 	text-decoration:none;
-}
+} */
 
 /* 搜索框设置 */
-.searcontent clearfix {
+/* .searcontent clearfix {
 	width: 100%;
 	height: 100px;
 	background-color: #CCCCCC;
@@ -370,14 +371,14 @@ a {
 	position: sticky;
 	top: 0px;
 	z-index: 1000;
-}
+} */
 
 .search {
 	background-color: white;
 }
 
 /* 搜索框设置 */
-[type="text"] {
+/* [type="text"] {
 	width: 85%;
 	height: 80px;
 	border: #666666 3px solid;
@@ -389,18 +390,17 @@ a {
 	border-bottom-right-radius: 100px;
 	border-top-right-radius: 100px;
 	outline: none;
-}
+} */
 
 .list-item2 a {
-	padding: 0 20px;
+	padding: 0 2.1vw;
 	color: var(--fColor);
 	font-weight: bold;
 	margin-bottom: 20px;
 	height: 60px;
 	background: #6D6D6D14;
 	display: inline-block;
-	/*把a变成行级块*/
-	border-radius: 10px;
+	border-radius: 3vw;
 	text-decoration: none;
 	text-align: center;
 	line-height: 60px;
@@ -410,50 +410,51 @@ a {
 .sxzl {
 	border: 0px solid #ccc;
 	border-right: none;
-	/* margin: 5% 10% 20% 6%; */
-	overflow: hidden;
 	float: left;
 	width: 100%;
 }
 
 .sxzl ul li {
 	float: left;
-	margin-left: 10%;
+	/* margin-left: 10%; */
 }
 
 .sxzl ul li a {
-	width: 175px;
-	height: 65px;
-	margin-right: 5px;
+	/* margin-right: 5px; */
 	/* margin:0px auto; */
-	margin-top: 30px;
-	text-align:center;
-	line-height: 65px;
+	/* margin-top: 30px; */
+	width: 20vw;
+	text-align: center;
+	/* line-height: 7vw; */
 	display: inline-block;
-	border-right: 4px solid #EEEEEE;
-	background: #eeeeee;
-	color: #4C51B1;
+	border-radius: 3vw;
+	-moz-box-shadow: 0px 3px 11px -6px #333333, 0px -3px 11px -6px #333333;
+	-webkit-box-shadow: 0px 3px 11px -6px #333333, 0px -3px 11px -6px #333333;
+	box-shadow: 0px 3px 11px -6px #333333, 0px -3px 11px -6px #333333;
+	color: var(--fColor);
+	text-decoration: none;
 }
 
 .sxzl ul li ul li a {
-	font-size: 35px;
+	font-size: 3.8vw;
 	margin-top: 0px;
 	border-right: 0px;
 	border-top: 0px dotted #ccc;
 	background: #f5f5f5;
 	border: 2px solid #4C51B1;
 	position: relative;
+	text-decoration: none;
 }
 
 /* 引入按钮 设置 */
-.icon .item1 a {
+.item1 a {
 	padding: 25px 10px 0 10px;
 	height: 100px;
 	display: inline-block;
 	/*把a变成行级块*/
 }
 
-.icon .item2 a {
+.item2 a {
 	padding: 25px 10px 0 10px;
 	height: 100px;
 	display: inline-block;
@@ -495,13 +496,6 @@ a {
 	/* border:1px solid black;显示黑色边框 */
 }
 
-.box-shadow-vertical {
-	-moz-box-shadow: 0px 6px 10px #3333333C;
-	-webkit-box-shadow: 0px 6px 10px #3333333C;
-	box-shadow: 0px 6px 10px #3333333C;
-	margin-bottom: 100px;
-}
-
 b {
 	position: absolute;
 	top: 90px;
@@ -520,36 +514,24 @@ b {
 }
 
 #sortout:hover {
-	background-color: #4C51B1;
+	background-color: var(--fColor);
 	color: #FFFFFF;
-	border-right: 4px solid #4C51B1;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
 }
 
 #lowers:hover {
-	background-color: #4C51B1;
+	background-color: var(--fColor);
 	color: #FFFFFF;
-	border-right: 4px solid #4C51B1;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-}
-
-#food,
-#botm {
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
 }
 
 #menu1 ul li a {
-	background: #4C51B1;
+	background: var(--fColor);
 	color: #FFFFFF;
 	position: relative;
 }
 
 #menu1 ul li a:hover {
 	background: #FFFFFF;
-	color: #4C51B1;
+	color: var(--fColor);
 }
 
 .sxzl ul li ul {
@@ -581,8 +563,7 @@ input[type=range]::-webkit-slider-thumb {
 	display: none;
 	border-bottom: none;
 	position: relative;
-	top: 0px;
-	width: 100px;
+/* 	width: 100px; */
 }
 
 #menus ul li:hover ul li ul {
@@ -625,8 +606,8 @@ input[type=range]::-webkit-slider-thumb {
 
 .middlefu {
 	position: absolute;
-/* 	width: 40%; */
-    height: 80%;
+	/* 	width: 40%; */
+	height: 80%;
 	margin-left: 150px;
 }
 
@@ -651,7 +632,7 @@ input[type=range]::-webkit-slider-thumb {
 	position: relative;
 	float: left;
 	left: 10%;
-	margin: 150px auto;
+	margin:auto;
 	width: 80%;
 	min-height: 1100px;
 	/* height: 1100px; */
@@ -692,6 +673,7 @@ input[type=range]::-webkit-slider-thumb {
 	width: 90%;
 	margin-bottom: 10px;
 }
+
 .circlefu {
 	width: 100px;
 	height: 120px;
@@ -702,26 +684,25 @@ input[type=range]::-webkit-slider-thumb {
 	-webkit-border-radius: 50%;
 	position: relative;
 }
+
 /*宋慧*/
 .container-sh {
 	border: 0 solid black;
 	position: relative;
 	left: auto;
 	right: auto;
-	margin-left: 90px;
-	margin-right: 90px;
+	margin-left: 8vw;
+	margin-right: 8vw;
+	margin-bottom: 18vw;
 }
 
 .dialog-box-sh {
 	border: 0 solid black;
 	width: 100%;
 	/*height: 400px;*/
-	border-radius: 75px;
-	margin-top: 100px;
+	border-radius: 10vw;
+	margin-top: 8vw;
 	display: inline-block;
-	-moz-box-shadow: 0px 8px 20px #3333333a;
-	-webkit-box-shadow: 0px 8px 20px #3333333a;
-	box-shadow: 0px 8px 20px #3333333a;
 	position: relative;
 }
 
@@ -732,18 +713,12 @@ input[type=range]::-webkit-slider-thumb {
 	border-radius: 75px;
 	margin-top: 100px;
 	display: inline-block;
-	-moz-box-shadow: 0px 8px 20px #3333333a;
-	-webkit-box-shadow: 0px 8px 20px #3333333a;
-	box-shadow: 0px 8px 20px #3333333a;
 	position: relative;
 }
 
 .inner-order-dialog-box {
 	border: 0 solid black;
 	border-radius: 75px;
-	-moz-box-shadow: 0px 8px 20px #3333333a;
-	-webkit-box-shadow: 0px 8px 20px #3333333a;
-	box-shadow: 0px 8px 20px #3333333a;
 	position: absolute;
 	height: 240px;
 	width: auto;
@@ -788,10 +763,12 @@ input[type=range]::-webkit-slider-thumb {
 	fill: currentColor;
 	border-radius: 50%;
 }
-.span-right{
-	position:absolute;
+
+.span-right {
+	position: absolute;
 	right: 7%;
 }
+
 .icon-right {
 	width: 100px;
 	height: 100px;
@@ -916,4 +893,9 @@ a:visited {
 	content: "";
 	display: block;
 	clear: both;
+}
+/* 假如顶栏都使用了Fixed定位请引用该属性 */
+.bot-nav-fixed-body{
+	margin-bottom: 18vw;
+	margin-top: 30vw;
 }
