1.修改底栏颜色 2.修改sx界面居中问题（未解决）

--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -491,8 +491,8 @@ li {
 	font-size: 20px;
 	/* margin-left: 20%; */
 	margin: 10px 0px 50px 30px;
-	height: 30px;
-	line-height: 30px;
+	height: 3.5vw;
+	line-height: 3.5vw;
 	/* border:1px solid black;显示黑色边框 */
 }
 
