--- a/asserts/CSS/yespaceCss.css
+++ b/asserts/CSS/yespaceCss.css
@@ -736,11 +736,28 @@ input[type=range]::-webkit-slider-thumb {
 	position: relative;
 	float: left;
 }
-
+.icon-star{
+	width: 100px;
+	height: 100px;
+	fill: currentColor;
+	background-color:transparent;
+	background-size: 100% 100%;
+	border-radius:50%;
+	margin-top:15px;
+	margin-left:15px;
+}
 .head-photo-sh {
 	position: absolute;
 	float: left;
 	z-index: 1;
+}
+.head-photo-size{
+	width:131px;
+	height:131px;
+	background-color: black;
+	border-radius: 50%;
+	margin-top:9.5px;
+	margin-left: 9.5px;
 }
 
 .head-photo-right {
@@ -763,7 +780,17 @@ input[type=range]::-webkit-slider-thumb {
 	fill: currentColor;
 	border-radius: 50%;
 }
-
+.following_img{
+	width:150px;
+	height:150px;
+	border-radius:50%;
+	margin-left: 50px;
+}
+.following_div{
+	float: left;
+	width:150px;
+	margin-left: 50px;
+}
 .span-right {
 	position: absolute;
 	right: 7%;
