--- a/asserts/CSS/fileinput.css
+++ b/asserts/CSS/fileinput.css
@@ -196,7 +196,7 @@
 }
 
 .file-upload-indicator:hover {
-    font-size: 1.2em;
+    /* font-size: 1.2em; */
     font-weight: bold;
     padding-top: 0;
 }
