--- a/asserts/CSS/cityselect.css
+++ b/asserts/CSS/cityselect.css
@@ -1,13 +1,13 @@
 /* citySelector */
 *{margin:0;padding:0;box-sizing:border-box;}
 .citySelector{font-size: 4vw;background:#fff;text-align:left;width: 100%;}
-.cityslide{width: 100%;list-style:none;margin:0;padding:0;border:1px solid var(--sColor);box-shadow:2px 2px 3px rgba(0,0,0,0.3);overflow:auto;/* max-height: 100%; */}
+.cityslide{width: 100%;list-style:none;margin:0;padding:0;overflow:auto;/* max-height: 100%; */}
 .cityslide li{list-style:none;overflow:hidden;/* height: 90px; */padding:0px 10px;/* line-height: 0; */}
 .cityslide li.on{background:var(--fColor);color:#fff;cursor:pointer;}
 .cityslide li:hover{background:var(--fColor);color:#fff;cursor:pointer;}
 .cityslide li b{font-weight:normal;}
 .cityslide li.empty{background:var(--fColor);color:white;}
-.cityslide li.empty em{color:red;font-style:normal;}
+.cityslide li.empty em{color:var(--sColor);font-style:normal;}
 .cityname{float:left;}
 .cityspell{float:right;}
 .cityBox{width:100%;border:1px solid var(--sColor);overflow:hidden;box-shadow:2px 2px 3px rgba(0,0,0,0.3);padding-top: 1vw;}
@@ -17,11 +17,11 @@
 .cityBox ul li.on{border-bottom-color:var(--fColor);position:relative;}
 .hide{display:none;}
 p.tip{color:#999;line-height:20px;padding:5px;margin:0;text-indent:3px;}
-.hotCity{border-top:1px solid #DDD;margin-top:-1px;clear:left;overflow:hidden;padding-bottom:10px;padding-top:10px;_margin-bottom:8px;}
+.hotCity{border-top:1px solid #DDD;margin-top:-1px;clear:left;overflow:hidden;padding-bottom:2vw;padding-top:1vw;}
 .cityTab{overflow:hidden;}
 .cityTab dl{margin:0;padding:0 0 0 10px;overflow:hidden;}
 .cityTab dl dt{float:left;padding-left:3px;color:var(--fColor);margin-top:1px;text-indent:5px;font-family:"Lucida console","consolas","courier new";line-height:25px;font-size: 4vw;width:20px;}
 .cityTab dl dd{margin-left:2px;float:left;width: 100%;}
-.cityTab dl dd a{padding-left:5px;min-width:66px;line-height:25px;display:inline-block;color:#333;text-decoration:none;}
+.cityTab dl dd a{padding-left:1vw;min-width:66px;line-height:25px;display:inline-block;color:#333;text-decoration:none;}
 .cityTab dl dd a:hover{color:var(--fColor);}
 .cityinput{ font-size: 12px; padding-left: 2px; background: url(T1EPyLXm0hXXXXXXXX-200-100.png) no-repeat 150px 5px; border: 1px solid #D8D8D8; }
