--- a/asserts/CSS/cityselect.css
+++ b/asserts/CSS/cityselect.css
@@ -10,7 +10,7 @@
 .cityslide li.empty em{color:var(--sColor);font-style:normal;}
 .cityname{float:left;}
 .cityspell{float:right;}
-.cityBox{width:100%;border:1px solid var(--sColor);overflow:hidden;box-shadow:2px 2px 3px rgba(0,0,0,0.3);padding-top: 1vw;}
+.cityBox{width:100%;overflow:hidden;padding-top: 1vw;}
 .cityBox ul{margin:0;padding:0;overflow:hidden;}
 .cityBox ul li:first-child{margin-left:5px;}
 .cityBox ul li{float:left;list-style:none;padding:5px;border-bottom:1px solid #DDD;cursor:pointer;display:inline;color:var(--fColor);}
@@ -20,7 +20,7 @@ p.tip{color:#999;line-height:20px;padding:5px;margin:0;text-indent:3px;}
 .hotCity{border-top:1px solid #DDD;margin-top:-1px;clear:left;overflow:hidden;padding-bottom:2vw;padding-top:1vw;}
 .cityTab{overflow:hidden;}
 .cityTab dl{margin:0;padding:0 0 0 10px;overflow:hidden;}
-.cityTab dl dt{float:left;padding-left:3px;color:var(--fColor);margin-top:1px;text-indent:5px;font-family:"Lucida console","consolas","courier new";line-height:25px;font-size: 4vw;width:20px;}
+.cityTab dl dt{float:left;padding-left:3px;color:var(--fColor);margin-top:1vw;text-indent:5px;font-family:"Lucida console","consolas","courier new";line-height:25px;font-size: 4vw;width:20px;}
 .cityTab dl dd{margin-left:2px;float:left;width: 100%;}
 .cityTab dl dd a{padding-left:1vw;min-width:66px;line-height:25px;display:inline-block;color:#333;text-decoration:none;}
 .cityTab dl dd a:hover{color:var(--fColor);}
