增加add内容 增加软件使用说明书

--- a/asserts/CSS/fileinput.css
+++ b/asserts/CSS/fileinput.css
@@ -118,8 +118,8 @@
 
 .file-preview-frame {
     display: table;
-    margin: 8px;
-    height: 160px;
+    margin: 1vw;
+    height: 21vw;
     border: 1px solid #ddd;
     box-shadow: 1px 1px 5px 0px #a2958a;
     padding: 6px;
